--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediafile.css">
 </head>
 <body>
 
@@ -21,7 +22,7 @@
             <a href="#" class="cmpny-logo">
                 <img src="assets/asset 1.png" alt="compant logo">
             </a>
-            <div class="nav-links">
+            <div class="nav-links" id="nav-links">
                 <ul class="flex">
                     <li><a href="#"class="hover-link">Product</a></li>
                     <li><a href="#"class="hover-link">Customer</a></li>
@@ -31,6 +32,9 @@
                     <li><a href="#"class="hover-link primary-button">Sign up</a></li>
                 </ul>
             </div>
+            <a href="#" class="nav-toggle hover-link" id="nav-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </a>
         </div>
     </nav>
 
@@ -125,7 +129,7 @@
     </section>
 
     <section class="big-features-sec">
-        <div class="container flex big-feature-container">
+        <div class="container flex " id="second-big-feature">
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
                 <h3>Design professionals</h3>
@@ -232,5 +236,14 @@
     </div>
 
     <script src="https://kit.fontawesome.com/7527cf0a54.js" crossorigin="anonymous"></script>
+
+    <script>
+        const toggleButton = document.getElementById('nav-toggle')
+        const navlinks =  document.getElementById('nav-links')
+
+        toggleButton.addEventListener('click', () => {
+            navlinks.classList.toggle('active');
+        })
+    </script>
 </body>
 </html>
